<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="search"/>
    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="more">
        <menu>
            <item
                android:id="@+id/menu_optional"
                android:checkable="true"
                android:title="@string/menu_text_optional"/>
            <item
                android:id="@+id/menu_onsale"
                android:checkable="true"
                android:title="@string/menu_text_onsale"/>
            <item
                android:id="@+id/menu_rank_setting"
                android:title="@string/menu_text_ranksetting"/>
            <item
                android:id="@+id/menu_setting"
                android:title="@string/menu_text_setting"/>
            <item
                android:id="@+id/menu_about"
                android:title="@string/menu_text_about"/>
        </menu>
    </item>

</menu>