<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:paddingBottom="30dp"
        android:paddingTop="50dp" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="项目名称信托"
            android:textColor="#333"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/set_feedback_title3"
            android:inputType="textPersonName"
            android:textColor="#666"
            android:textColorHint="#7f666666"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/simu_subscribe_phone"
            android:inputType="text|phone"
            android:textColor="#666"
            android:textColorHint="#7f666666"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:lineSpacingExtra="12dp"
            android:text="@string/simu_subscribe_explain"
            android:textColor="#666"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/xml_bt_buy_bk"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="40dp"
            android:minWidth="186dp"
            android:onClick="onXmlBtClick"
            android:text="@string/simu_subscribe_submit"
            android:textColor="#fff"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/lay_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onXmlBtClick"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:minHeight="40dp"
                android:minWidth="40dp"
                android:src="@drawable/ic_tel" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/set_about_text_server_des"
                android:textColor="#999"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv1"
                android:layout_below="@id/tv1"
                android:text="@string/set_about_text_server_tel"
                android:textColor="@color/text_increase"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>